nextcloud/nextcloud-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        volumeMounts:
          - name: db-storage
            mountPath: /var/lib/mysql
            subPath: mysql-data
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: nextcloud-db-storage
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
  - protocol: TCP
    port: 3306
