nextcloud/nextcloud-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-server
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-server-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-server-pod
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
          subPath: server-data
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-server-storage
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-server
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-server-pod
  ports:
  - port: 80
